website: Rename utils to assets

--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="stylesheet" href="utils/fonts/fonts.css"/>
-	<link rel="stylesheet" href="utils/css/main.css"/>
+	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
+	<link rel="stylesheet" href="assets/css/main.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
 
 	<body>
 		<div id="topbar">
-			<script src="utils/js/topbar.js" page="blog"></script>
+			<script src="assets/js/topbar.js" page="blog"></script>
 		</div>
 		<div class="main-page">
 			<h1>WIP</h1>
