--- a/downloads.html
+++ b/downloads.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="stylesheet" href="utils/fonts/fonts.css"/>
-	<link rel="stylesheet" href="utils/css/main.css"/>
+	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
+	<link rel="stylesheet" href="assets/css/main.css"/>
 
-	<link rel="stylesheet" href="utils/css/downloads.css"/>
+	<link rel="stylesheet" href="assets/css/downloads.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -19,7 +19,7 @@
 
 	<body>
 		<div id="topbar">
-			<script src="utils/js/topbar.js" page="downloads"></script>
+			<script src="assets/js/topbar.js" page="downloads"></script>
 		</div>
 		<div class="main-page">
 			<div class="devices-list" id="devices-list">
@@ -34,5 +34,5 @@
 			</div>
 		</div>
 	</body>
-	<script src="utils/js/downloads.js"></script>
+	<script src="assets/js/downloads.js"></script>
 </html>
