--- a/index.html
+++ b/index.html
@@ -20,32 +20,7 @@
 			<script src="assets/js/topbar.js" page="home"></script>
 		</div>
 		<div class="main-page">
-			<h1>Hi! I'm Sebastiano Barezzi (aka SebaUbuntu)</h1>
-			<h3>My projects:</h3>
-			<ul>
-				<h3>
-					<li>LineageOS
-						<ul>
-							<li>Official co-maintainer for Xiaomi Redmi Note 5 (whyred)</li>
-							<li>Unofficial maintainer for POCO F2 Pro (lmi)</li>
-							<li>Unofficial maintainer for Asus Zenfone 4 Max (X00H and X00I)</li>
-							<li>Unofficial maintainer for Xiaomi Mi 8 Lite (platina)</li>
-						</ul>
-					</li>
-					<br>
-					<li>Project Fluid
-						<ul>
-							<li>Official maintainer for Xiaomi Redmi Note 5 (whyred)</li>
-						</ul>
-					</li>
-					<br>
-					<li>RevengeOS
-						<ul>
-							<li>Official maintainer for Xiaomi Redmi Note 5 (whyred)</li>
-						</ul>
-					</li>
-				</h3>
-			</ul>
+			<h1>Select a tab at the top of the website</h3>
 		</div>
 	</body>
 </html>
