treewide: Update URL

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
 		<meta property="og:title" content="SebaUbuntu" />
 		<meta property="og:description" content="SebaUbuntu's website" />
 		<meta property="og:image" content="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4" />
-		<meta property="og:url" content="https://sebaubuntu.me" />
+		<meta property="og:url" content="https://sebaubuntu.dev" />
 
 		<title>SebaUbuntu</title>
 		<link rel="icon" type="image/png" href="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4">
