treewide: Recognize main page with id
Change-Id: I141ade328e94a5cf729a00ad6130da8e3eb37a56

--- a/downloads.html
+++ b/downloads.html
@@ -21,7 +21,7 @@
 		<div id="topbar">
 			<script src="assets/js/topbar.js" page="downloads"></script>
 		</div>
-		<div class="main-page">
+		<div id="main-page">
 			<div class="devices-list" id="devices-list">
 				<h1>Devices</h1>
 				<h2>Loading...</h2>
