--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 		<div id="topbar">
 			<script src="assets/js/topbar.js" page="blog"></script>
 		</div>
-		<div class="main-page">
+		<div id="main-page">
             <div id="blog-main">
                 <h1>Loading...</h1>
             </div>
