--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div id="topbar">
 			<script src="assets/js/topbar.js" page="home"></script>
 		</div>
-		<div class="main-page">
+		<div id="main-page">
 			<h1>Select a tab at the top of the website</h1>
 		</div>
 	</body>
