devices: Avoid using class where possible
Change-Id: I778e0f520a81df21827340917fd94c7adbe2f186

--- a/downloads.html
+++ b/downloads.html
@@ -22,13 +22,13 @@
 			<script src="assets/js/topbar.js" page="downloads"></script>
 		</div>
 		<div id="main-page">
-			<div class="devices-list" id="devices-list">
+			<div id="devices-list">
 				<h1>Devices</h1>
 				<h2>Loading...</h2>
 			</div>
-			<div class="device-tab" id="device-tab">
-				<div class="device-image-tab" id="device-image-tab"></div>
-				<div class="device-info-tab" id="device-info-tab">
+			<div id="device-tab">
+				<div id="device-image-tab"></div>
+				<div id="device-info-tab">
 					<h1>Please select a device in the devices menu</h1>
 				</div>
 			</div>
