--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
 	</head>
 
 	<body>
-		<div id="topbar">
+		<div id="topbar-container">
 			<script src="assets/js/topbar.js" page="blog"></script>
 		</div>
 		<div id="main-page">
