--- a/downloads.html
+++ b/downloads.html
@@ -18,7 +18,7 @@
 	</head>
 
 	<body>
-		<div id="topbar">
+		<div id="topbar-container">
 			<script src="assets/js/topbar.js" page="downloads"></script>
 		</div>
 		<div id="main-page">
