--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<body>
-		<div id="topbar">
+		<div id="topbar-container">
 			<script src="assets/js/topbar.js" page="home"></script>
 		</div>
 		<div id="main-page">
