--- a/downloads.html
+++ b/downloads.html
@@ -2,8 +2,7 @@
 <html lang="en">
 	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
 	<link rel="stylesheet" href="assets/css/main.css"/>
-
-	<link rel="stylesheet" href="assets/css/downloads.css"/>
+	<link rel="stylesheet" href="assets/downloads/main.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -34,5 +33,5 @@
 			</div>
 		</div>
 	</body>
-	<script src="assets/js/downloads.js"></script>
+	<script src="assets/downloads/main.js"></script>
 </html>
