--- a/downloads.html
+++ b/downloads.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/js/topbar.js" page="downloads"></script>
+			<script src="assets/topbar/main.js" page="downloads"></script>
 		</div>
 		<div id="main-page">
 			<div id="devices-list">
