--- a/blog.html
+++ b/blog.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
 	<link rel="stylesheet" href="assets/css/main.css"/>
-	<link rel="stylesheet" href="assets/css/blog.css"/>
+	<link rel="stylesheet" href="assets/blog/main.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,5 +27,5 @@
 		</div>
 	</body>
 
-    <script src="assets/js/blog.js"></script>
+    <script src="assets/blog/main.js"></script>
 </html>
