--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js" page="blog"></script>
+			<script src="assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
             <div id="blog-main">
