--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js" page="home"></script>
+			<script src="assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
 			<h1>Select a tab at the top of the website</h1>
