treewide: CSS refactor
Change-Id: Id02319ae43a2fd3b48428a42d561fad2f039e540

--- a/blog.html
+++ b/blog.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
-	<link rel="stylesheet" href="assets/css/main.css"/>
-	<link rel="stylesheet" href="assets/blog/main.css"/>
+	<link rel="stylesheet" href="assets/css/blog.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
