--- a/downloads.html
+++ b/downloads.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-	<link rel="stylesheet" href="assets/fonts/fonts.css"/>
-	<link rel="stylesheet" href="assets/css/main.css"/>
-	<link rel="stylesheet" href="assets/downloads/main.css"/>
+	<link rel="stylesheet" href="assets/css/downloads.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
