treewide: License headers
Change-Id: Ifb66c4978001d3243758e8231512fcd46c7fbc0c

--- a/downloads.html
+++ b/downloads.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<!--
+	SPDX-FileCopyrightText: 2024 Sebastiano Barezzi <seba@sebaubuntu.dev>
+	SPDX-License-Identifier: MIT
+-->
 <html lang="en">
 	<link rel="stylesheet" href="assets/css/downloads.css"/>
 
