--- a/downloads.html
+++ b/downloads.html
@@ -9,12 +9,13 @@
 	<head prefix="og: http://ogp.me/ns#">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<meta property="og:title" content="SebaUbuntu" />
-		<meta property="og:description" content="SebaUbuntu's website" />
-		<meta property="og:image" content="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4" />
-		<meta property="og:url" content="https://sebaubuntu.dev" />
 
-		<title>SebaUbuntu</title>
+		<meta property="og:title" content="SebaUbuntu - Downloads" />
+		<meta property="og:description" content="Downloads" />
+		<meta property="og:image" content="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4" />
+		<meta property="og:url" content="https://sebaubuntu.dev/downloads.html" />
+
+		<title>SebaUbuntu - Downloads</title>
 		<link rel="icon" type="image/png" href="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4">
 	</head>
 
