--- a/lineageapps.html
+++ b/lineageapps.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="assets/css/lineageapps.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
