treewide: Use SVG for logo
Change-Id: Id58de3bd4d22a185888312cb4887a30df2f52806

--- a/blog.html
+++ b/blog.html
@@ -13,11 +13,11 @@
 
 		<meta property="og:title" content="SebaUbuntu - Blog" />
 		<meta property="og:description" content="Blog" />
-		<meta property="og:image" content="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4" />
+		<meta property="og:image" content="assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/blog.html" />
 
 		<title>SebaUbuntu - blog</title>
-		<link rel="icon" type="image/png" href="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4">
+		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
 	</head>
 
 	<body>
