--- a/downloads.html
+++ b/downloads.html
@@ -13,11 +13,11 @@
 
 		<meta property="og:title" content="SebaUbuntu - Downloads" />
 		<meta property="og:description" content="Downloads" />
-		<meta property="og:image" content="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4" />
+		<meta property="og:image" content="assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/downloads.html" />
 
 		<title>SebaUbuntu - Downloads</title>
-		<link rel="icon" type="image/png" href="https://avatars3.githubusercontent.com/u/38215111?s=200&v=4">
+		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
 	</head>
 
 	<body>
