status: Initial version
Change-Id: I9da4e8f9203634c0251b6b8c23aa4d2a59e4d338

--- a/status.html
+++ b/status.html
@@ -4,19 +4,19 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/blog.css"/>
+	<link rel="stylesheet" href="assets/css/status.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-		<meta property="og:title" content="SebaUbuntu - Blog" />
-		<meta property="og:description" content="Blog" />
+		<meta property="og:title" content="SebaUbuntu - Status" />
+		<meta property="og:description" content="Status" />
 		<meta property="og:image" content="assets/logo.svg" />
-		<meta property="og:url" content="https://sebaubuntu.dev/blog.html" />
+		<meta property="og:url" content="https://sebaubuntu.dev/status.html" />
 
-		<title>SebaUbuntu - Blog</title>
+		<title>SebaUbuntu - Status</title>
 		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
 	</head>
 
@@ -25,11 +25,9 @@
 			<script src="assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
-            <div id="blog-main">
-                <h1>Loading...</h1>
-            </div>
+			<h2>Loading...</h2>
 		</div>
-	</body>
 
-    <script src="assets/blog/main.js"></script>
+		<script type="module" src="assets/status/main.js"></script>
+	</body>
 </html>
