--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/blog.css"/>
+	<link rel="stylesheet" href="/assets/css/blog.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
@@ -13,21 +13,21 @@
 
 		<meta property="og:title" content="SebaUbuntu - Blog" />
 		<meta property="og:description" content="Blog" />
-		<meta property="og:image" content="assets/logo.svg" />
+		<meta property="og:image" content="/assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/blog.html" />
 
 		<title>SebaUbuntu - Blog</title>
-		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+		<link rel="icon" type="image/svg+xml" href="/assets/logo.svg">
 	</head>
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js"></script>
+			<script src="/assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
             <h1>Loading...</h1>
 		</div>
 	</body>
 
-    <script src="assets/blog/main.js"></script>
+    <script src="/assets/blog/main.js"></script>
 </html>
