--- a/downloads.html
+++ b/downloads.html
@@ -4,7 +4,7 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/downloads.css"/>
+	<link rel="stylesheet" href="/assets/css/downloads.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
@@ -13,16 +13,16 @@
 
 		<meta property="og:title" content="SebaUbuntu - Downloads" />
 		<meta property="og:description" content="Downloads" />
-		<meta property="og:image" content="assets/logo.svg" />
+		<meta property="og:image" content="/assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/downloads.html" />
 
 		<title>SebaUbuntu - Downloads</title>
-		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+		<link rel="icon" type="image/svg+xml" href="/assets/logo.svg">
 	</head>
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js"></script>
+			<script src="/assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
 			<div id="devices-list">
@@ -37,5 +37,5 @@
 			</div>
 		</div>
 	</body>
-	<script src="assets/downloads/main.js"></script>
+	<script src="/assets/downloads/main.js"></script>
 </html>
