--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/index.css"/>
+	<link rel="stylesheet" href="/assets/css/index.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
@@ -13,16 +13,16 @@
 
 		<meta property="og:title" content="SebaUbuntu - Main page" />
 		<meta property="og:description" content="Main page" />
-		<meta property="og:image" content="assets/logo.svg" />
+		<meta property="og:image" content="/assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/index.html" />
 
 		<title>SebaUbuntu - Main page</title>
-		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+		<link rel="icon" type="image/svg+xml" href="/assets/logo.svg">
 	</head>
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js"></script>
+			<script src="/assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
 			<h1>Select a tab at the top of the website</h1>
