--- a/lineageapps.html
+++ b/lineageapps.html
@@ -4,7 +4,7 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/lineageapps.css"/>
+	<link rel="stylesheet" href="/assets/css/lineageapps.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
@@ -13,16 +13,16 @@
 
 		<meta property="og:title" content="SebaUbuntu - LineageOS apps" />
 		<meta property="og:description" content="LineageOS apps" />
-		<meta property="og:image" content="assets/logo.svg" />
+		<meta property="og:image" content="/assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/lineageapps.html" />
 
 		<title>SebaUbuntu - LineageOS apps</title>
-		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+		<link rel="icon" type="image/svg+xml" href="/assets/logo.svg">
 	</head>
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js"></script>
+			<script src="/assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
 			<div id="apps-list">
@@ -35,5 +35,5 @@
 		</div>
 	</body>
 
-	<script type="module" src="assets/lineageapps/main.js"></script>
+	<script type="module" src="/assets/lineageapps/main.js"></script>
 </html>
