--- a/status.html
+++ b/status.html
@@ -4,7 +4,7 @@
 	SPDX-License-Identifier: MIT
 -->
 <html lang="en">
-	<link rel="stylesheet" href="assets/css/status.css"/>
+	<link rel="stylesheet" href="/assets/css/status.css"/>
 
 	<head prefix="og: http://ogp.me/ns#">
 		<meta charset="UTF-8">
@@ -13,21 +13,21 @@
 
 		<meta property="og:title" content="SebaUbuntu - Status" />
 		<meta property="og:description" content="Status" />
-		<meta property="og:image" content="assets/logo.svg" />
+		<meta property="og:image" content="/assets/logo.svg" />
 		<meta property="og:url" content="https://sebaubuntu.dev/status.html" />
 
 		<title>SebaUbuntu - Status</title>
-		<link rel="icon" type="image/svg+xml" href="assets/logo.svg">
+		<link rel="icon" type="image/svg+xml" href="/assets/logo.svg">
 	</head>
 
 	<body>
 		<div id="topbar-container">
-			<script src="assets/topbar/main.js"></script>
+			<script src="/assets/topbar/main.js"></script>
 		</div>
 		<div id="main-page">
 			<h2>Loading...</h2>
 		</div>
 
-		<script type="module" src="assets/status/main.js"></script>
+		<script type="module" src="/assets/status/main.js"></script>
 	</body>
 </html>
